Fix bookmarks without favicon missing the default icon

Bug introduced in 05bb7a5c47ff25f3b998a0e0b0d3aa441e2dbb31 [formerly 55b3fe20e2e1c5586d54004447d2953fee767599] where, for
the first time, bookmark observers can get notified with an empty
favicon (i.e. the bookmark does not have a favicon). In this case, the
UIs that want to fall back to the default icon need to handle it
specifically.

BookmarkMenuDelegate seems to be the only UI that cares are this
particular event. To fix it, we mimic the logic implemented in the
very same class, in BookmarkMenuDelegate::BuildMenu(), and treat the
null image just like the default icon.

Bug: 787363
Change-Id: Idf8fc5d2f2937ab16780a43320dd6689876244fa
Reviewed-on: https://chromium-review.googlesource.com/782320
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Mikel Astiz <mastiz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519662}
Former-commit-id: e7a247abf169ca5f2c2abca7787be0f8c19bc26c